projects/rdc/include/rdc/rdc.h


typedef enum {
     RDC_ST_OK                  = 0,  
     RDC_ST_NOT_SUPPORTED,            
     RDC_ST_MSI_ERROR,                
     RDC_ST_FAIL_LOAD_MODULE,         
     RDC_ST_INVALID_HANDLER,          
     RDC_ST_BAD_PARAMETER,            
     RDC_ST_NOT_FOUND,                
     RDC_ST_CONFLICT,                 
     RDC_ST_CLIENT_ERROR,             
     RDC_ST_ALREADY_EXIST,            
     RDC_ST_MAX_LIMIT                 
} rdc_status_t;
typedef enum {
    RDC_OPERATION_MODE_AUTO   = 0,
    RDC_OPERATION_MODE_MANUAL
} rdc_operation_mode_t;
typedef enum {
    RDC_GROUP_DEFAULT = 0,      
    RDC_GROUP_EMPTY             
} rdc_group_type_t;
typedef enum {
     INTEGER = 0,
     DOUBLE,
     STRING,
     BLOB
} rdc_field_type_t;
#define GPU_ID_INVALID          -1
#define RDC_GROUP_ALL_GPUS      -1000
#define RDC_JOB_STATS_FIELDS    -1000
#define RDC_MAX_STR_LENGTH      256
#define RDC_GROUP_MAX_ENTITIES  64
#define RDC_MAX_NUM_DEVICES     16
#define RDC_MAX_FIELD_IDS_PER_FIELD_GROUP 128
#define RDC_MAX_NUM_GROUPS      64
#define RDC_MAX_NUM_FIELD_GROUPS 64
typedef enum {
  RDC_FI_INVALID = 0,                
  RDC_FI_GPU_COUNT = 1,              
  RDC_FI_DEV_NAME,                   
  RDC_FI_GPU_CLOCK = 100,           
  RDC_FI_MEM_CLOCK,                 
  RDC_FI_MEMORY_TEMP = 200,          
  RDC_FI_GPU_TEMP,                   
  RDC_FI_POWER_USAGE = 300,          
  RDC_FI_PCIE_TX = 400,              
  RDC_FI_PCIE_RX,                    
  RDC_FI_GPU_UTIL = 500,             
  RDC_FI_GPU_MEMORY_USAGE,           
  RDC_FI_GPU_MEMORY_TOTAL,           
  RDC_FI_ECC_CORRECT_TOTAL = 600,    
  RDC_FI_ECC_UNCORRECT_TOTAL,        
} rdc_field_t;
typedef void *rdc_handle_t;           
typedef uint32_t rdc_gpu_group_t;     
typedef uint32_t rdc_field_grp_t;     
typedef struct {
    char  device_name[RDC_MAX_STR_LENGTH];     
} rdc_device_attributes_t;
typedef struct {
    unsigned int count;     
    char group_name[RDC_MAX_STR_LENGTH];     
    uint32_t entity_ids[RDC_GROUP_MAX_ENTITIES];
} rdc_group_info_t;
typedef struct {
    uint64_t max_value;   
    uint64_t min_value;   
    uint64_t average;     
    double standard_deviation;   
} rdc_stats_summary_t;
typedef struct {
    uint32_t gpu_id;        
    uint64_t start_time;    
    uint64_t end_time;      
    uint64_t energy_consumed;               
    uint64_t ecc_correct;                   
    uint64_t ecc_uncorrect;                 
    rdc_stats_summary_t pcie_tx;            
    rdc_stats_summary_t pcie_rx;            
    rdc_stats_summary_t power_usage;        
    rdc_stats_summary_t gpu_clock;          
    rdc_stats_summary_t memory_clock;       
    rdc_stats_summary_t gpu_utilization;    
    rdc_stats_summary_t gpu_temperature;    
    uint64_t max_gpu_memory_used;            
    rdc_stats_summary_t memory_utilization;  
} rdc_gpu_usage_info_t;       
typedef struct {
     uint32_t num_gpus;              
     rdc_gpu_usage_info_t summary;   
     rdc_gpu_usage_info_t gpus[16];  
} rdc_job_info_t;
typedef struct {
    rdc_field_t  field_id;      
    int     status;             
    uint64_t ts;                
    rdc_field_type_t type;      
    union {
        int64_t l_int;
        double  dbl;
        char str[RDC_MAX_STR_LENGTH];
    } value;                     
} rdc_field_value;
typedef struct {
    uint32_t count;                      
    char group_name[RDC_MAX_STR_LENGTH];     
    rdc_field_t field_ids[RDC_MAX_FIELD_IDS_PER_FIELD_GROUP];
} rdc_field_group_info_t;
typedef struct {
    char job_id[RDC_MAX_STR_LENGTH];            
    rdc_gpu_group_t group_id;                   
    uint64_t start_time;                         
    uint64_t stop_time;                          
} rdc_job_group_info_t;
rdc_status_t rdc_init(uint64_t init_flags);
rdc_status_t rdc_shutdown();
rdc_status_t rdc_start_embedded(rdc_operation_mode_t op_mode,
                                    rdc_handle_t* p_rdc_handle);
rdc_status_t rdc_stop_embedded(rdc_handle_t p_rdc_handle);
rdc_status_t rdc_connect(const char *ipAndPort, rdc_handle_t* p_rdc_handle,
        const char* root_ca, const char* client_cert, const char* client_key);
rdc_status_t rdc_disconnect(rdc_handle_t p_rdc_handle);
rdc_status_t rdc_job_start_stats(rdc_handle_t p_rdc_handle,
    rdc_gpu_group_t group_id, const char job_id[64], uint64_t update_freq);
rdc_status_t rdc_job_get_stats(rdc_handle_t p_rdc_handle,
                           const char job_id[64], rdc_job_info_t* p_job_info);
rdc_status_t rdc_job_stop_stats(rdc_handle_t p_rdc_handle,
                                                       const char job_id[64]);
rdc_status_t rdc_job_remove(rdc_handle_t p_rdc_handle, const char job_id[64]);
rdc_status_t rdc_job_remove_all(rdc_handle_t p_rdc_handle);
rdc_status_t rdc_field_update_all(rdc_handle_t p_rdc_handle,
                    uint32_t wait_for_update);
rdc_status_t rdc_device_get_all(rdc_handle_t p_rdc_handle,
            uint32_t gpu_index_list[RDC_MAX_NUM_DEVICES], uint32_t* count);
rdc_status_t rdc_device_get_attributes(rdc_handle_t p_rdc_handle,
            uint32_t gpu_index, rdc_device_attributes_t* p_rdc_attr);
rdc_status_t rdc_group_gpu_create(rdc_handle_t p_rdc_handle,
    rdc_group_type_t type, const char* group_name,
    rdc_gpu_group_t* p_rdc_group_id);
rdc_status_t rdc_group_gpu_add(rdc_handle_t p_rdc_handle,
    rdc_gpu_group_t group_id, uint32_t gpu_index);
rdc_status_t rdc_group_gpu_get_info(rdc_handle_t p_rdc_handle,
            rdc_gpu_group_t p_rdc_group_id, rdc_group_info_t* p_rdc_group_info);
rdc_status_t rdc_group_get_all_ids(rdc_handle_t p_rdc_handle,
            rdc_gpu_group_t group_id_list[], uint32_t* count);
rdc_status_t rdc_group_gpu_destroy(rdc_handle_t p_rdc_handle,
        rdc_gpu_group_t p_rdc_group_id);
rdc_status_t rdc_group_field_create(rdc_handle_t p_rdc_handle,
            uint32_t num_field_ids, rdc_field_t* field_ids,
            const char* field_group_name, rdc_field_grp_t* rdc_field_group_id);
rdc_status_t rdc_group_field_get_info(rdc_handle_t p_rdc_handle,
            rdc_field_grp_t rdc_field_group_id,
            rdc_field_group_info_t* field_group_info);
rdc_status_t rdc_group_field_get_all_ids(rdc_handle_t p_rdc_handle,
            rdc_field_grp_t field_group_id_list[], uint32_t* count);
rdc_status_t rdc_group_field_destroy(rdc_handle_t p_rdc_handle,
        rdc_field_grp_t rdc_field_group_id);
rdc_status_t rdc_field_watch(rdc_handle_t p_rdc_handle,
        rdc_gpu_group_t group_id, rdc_field_grp_t field_group_id,
        uint64_t update_freq, double max_keep_age, uint32_t max_keep_samples);
rdc_status_t rdc_field_get_latest_value(rdc_handle_t p_rdc_handle,
        uint32_t gpu_index, rdc_field_t field, rdc_field_value* value);
rdc_status_t rdc_field_get_value_since(rdc_handle_t p_rdc_handle,
        uint32_t gpu_index, rdc_field_t field, uint64_t since_time_stamp,
        uint64_t *next_since_time_stamp, rdc_field_value* value);
rdc_status_t rdc_field_unwatch(rdc_handle_t p_rdc_handle,
        rdc_gpu_group_t group_id, rdc_field_grp_t field_group_id);
const char* rdc_status_string(rdc_status_t status);
const char* field_id_string(rdc_field_t field_id);
rdc_field_t get_field_id_from_name(const char* name);